# uploader

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
client/: CMakeLists.txt  FileInfo.h  FileSystemWatcher.cpp  FileSystemWatcher.h  FileWatcherLinux.cpp  ProgressLogThread.cpp  ProgressLogThread.h  UploadWorker.cpp  UploadWorker.h  main.cpp  utils.cpp  utils.h
server/: CMakeLists.txt  DownloadWorker.cpp  DownloadWorker.h  FileMap.cpp  FileMap.h  FileServer.cpp  FileServer.h  main.cpp
